# oasis

./: .gitignore  COPYING  Makefile.am  README.md  configure.ac
build-aux/m4/: bitcoin_qt.m4  gmp.m4
contrib/: gitian-build.py  install_db4.sh  oasis-qt.pro  oasisd.bash-completion  valgrind.supp
contrib/debian/: changelog  control  oasis-qt.desktop  oasisd.bash-completion  oasisd.install  oasisd.manpages  oasisd.postinst  oasisd.postrm  oasisd.service
contrib/devtools/: README.md  copyright_header.py  gen-manpages.sh  test_deterministic_coverage.sh  update-translations.py
contrib/gitian-descriptors/: gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win-signer.yml  gitian-win.yml
contrib/gitian-keys/: README.md
contrib/init/: oasisd.conf  oasisd.init  oasisd.openrc  oasisd.openrcconf  oasisd.service
contrib/macdeploy/: README.md  custom_dsstore.py  detached-sig-create.sh  macdeployqtplus
contrib/qos/: README.md
contrib/seeds/: generate-seeds.py  makeseeds.py
contrib/spendfrom/: spendfrom.py
depends/: README.md
doc/: Doxyfile.in  README.md  REST-interface.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  developer-notes.md  files.md  fuzzing.md  gitian-building.md  reduce-memory.md  release-notes.md  release-process.md  tor.md
doc/man/: oasis-cli.1  oasis-qt.1  oasis-tx.1  oasisd.1
doc/release-notes/: draft-release-notes-6.0.0.md  release-notes-3.0.0.md  release-notes-4.0.0.md
params/: install-params.sh
share/: setup.nsi.in
share/qt/: Info.plist.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  activemasternode.cpp  activemasternode.h  addrdb.cpp  addrdb.h  addressbook.cpp  addressbook.h  addrman.cpp  addrman.h  amount.h  base58.cpp  base58.h  bignum.cpp  bignum.h  bip38.cpp  bip38.h  blockassembler.cpp  blockassembler.h  blocksignature.cpp  blocksignature.h  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.cpp  (+121 more)
src/bench/: bench_oasis.cpp  bls.cpp  bls_dkg.cpp  walletprocessblock.cpp
src/bls/: bls_ies.h  bls_worker.cpp  bls_worker.h  bls_wrapper.cpp  bls_wrapper.h
src/budget/: budgetdb.cpp  budgetdb.h  budgetmanager.cpp  budgetmanager.h  budgetproposal.cpp  budgetproposal.h  budgetutil.cpp  budgetutil.h  budgetvote.cpp  budgetvote.h  finalizedbudget.cpp  finalizedbudget.h  finalizedbudgetvote.cpp  finalizedbudgetvote.h
src/compat/: byteswap.h  glibc_compat.cpp  glibc_sanity.cpp
src/config/: oasis-config.h.in
src/consensus/: consensus.h  params.cpp  params.h  tx_verify.cpp  upgrades.cpp  upgrades.h  validation.h
src/crypto/: common.h
src/evo/: deterministicmns.cpp  deterministicmns.h  evodb.cpp  evodb.h  evonotificationinterface.h  providertx.cpp  (+3 more)
src/qt/: CMakeLists.txt  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bantablemodel.h  bitcoinaddressvalidator.cpp  bitcoinunits.cpp  bitcoinunits.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macnotificationhandler.h  macnotificationhandler.mm  networkstyle.cpp  notificator.cpp  notificator.h  oasis.cpp  oasis.qrc  oasis_locale.qrc  oasisstrings.cpp  openuridialog.cpp  openuridialog.h  optionsmodel.cpp  optionsmodel.h  paymentserver.cpp  (+27 more)
src/qt/forms/: coincontroldialog.ui  intro.ui  openuridialog.ui  rpcconsole.ui
src/qt/locale/: oasis_de.ts  oasis_en.ts  oasis_en_US.ts  oasis_es.ts  oasis_fr_FR.ts  oasis_hr_HR.ts  oasis_ko_KR.ts  oasis_nl.ts  oasis_pl.ts
src/qt/oasis/: addnewaddressdialog.cpp  addnewaddressdialog.h  addnewcontactdialog.cpp  addnewcontactdialog.h  addresseswidget.cpp  addresseswidget.h  addressfilterproxymodel.cpp  addressfilterproxymodel.h  addressholder.cpp  addressholder.h  addresslabelrow.cpp  addresslabelrow.h  balancebubble.cpp  balancebubble.h  coldstakingmodel.cpp  coldstakingmodel.h  coldstakingwidget.cpp  coldstakingwidget.h  contactdropdownrow.cpp  contactdropdownrow.h  contactsdropdown.cpp  contactsdropdown.h  createproposaldialog.cpp  createproposaldialog.h  csrow.cpp  csrow.h  dashboardwidget.cpp  dashboardwidget.h  defaultdialog.cpp  defaultdialog.h  expandablebutton.cpp  expandablebutton.h  focuseddialog.cpp  focuseddialog.h  furabstractlistitemdelegate.cpp  furabstractlistitemdelegate.h  furlistrow.h  governancemodel.cpp  governancemodel.h  governancewidget.cpp  (+71 more)
src/qt/oasis/forms/: addresseswidget.ui  coldstakingwidget.ui  createproposaldialog.ui  dashboardwidget.ui  governancewidget.ui  masternodeswidget.ui  navmenuwidget.ui  receivewidget.ui  requestdialog.ui  send.ui  sendchangeaddressdialog.ui  sendmultirow.ui  topbar.ui  votedialog.ui  welcomecontentwidget.ui
src/qt/oasis/res/css/: style_dark.css  style_light.css
src/qt/oasis/settings/: settingsbackupwallet.cpp  settingsbackupwallet.h  settingsbittoolwidget.cpp  settingsbittoolwidget.h  settingsconsolewidget.cpp  settingsconsolewidget.h  settingsdisplayoptionswidget.cpp  settingsdisplayoptionswidget.h  settingsexportcsv.cpp  settingsexportcsv.h  settingsfaqwidget.cpp  settingsfaqwidget.h  settingsinformationwidget.cpp  settingsinformationwidget.h  settingsmainoptionswidget.cpp  settingsmainoptionswidget.h  settingssignmessagewidgets.cpp  settingssignmessagewidgets.h  settingswalletoptionswidget.cpp  settingswalletoptionswidget.h  settingswalletrepairwidget.cpp  settingswalletrepairwidget.h  settingswidget.cpp  settingswidget.h
src/qt/oasis/settings/forms/: settingsbittoolwidget.ui  settingsfaqwidget.ui  settingssignmessagewidgets.ui  settingswalletoptionswidget.ui  settingswidget.ui
src/qt/res/: oasis-qt-res.rc
src/qt/res/css/: default.css
src/qt/test/: test_main.cpp  uritests.cpp
(+272 files in other folders)
